--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- OGP / Open Graph Protocol -->
     <meta property="og:title" content="ホーム - 鬱猫界隈">
-    <meta property="og:description" content="メンバー数15,000人以上を誇るとってもにぎやかで居心地のいい雑談サーバーです">
+    <meta property="og:description" content="メンバー数15,000人以上を誇る、とってもにぎやかで居心地のいい雑談サーバーです">
     <meta property="og:image" content="https://utuneko.com/images/text.png">
     <meta property="og:url" content="https://utuneko.com/">
     <meta property="og:type" content="website">
@@ -16,7 +16,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ホーム - 鬱猫界隈">
-    <meta name="twitter:description" content="メンバー数15,000人以上を誇るとってもにぎやかで居心地のいい雑談サーバーです">
+    <meta name="twitter:description" content="メンバー数15,000人以上を誇る、とってもにぎやかで居心地のいい雑談サーバーです">
     <meta name="twitter:image" content="https://utuneko.com/images/text.png">
     
     <!-- Favicon -->
@@ -62,7 +62,7 @@
             <img src="images/text.png" alt="鬱猫ちゃん" class="main-cat-image">
             <h2 class="gradient-text">ようこそ、鬱猫界隈へ</h2>
             <p>
-                鬱猫界隈はメンバー数15,000人以上を誇るとってもにぎやかで居心地のいい雑談サーバーです。<br>
+                鬱猫界隈はメンバー数15,000人以上を誇る、とってもにぎやかで居心地のいい雑談サーバーです。<br>
                 毎日5,000件以上のチャットが飛び交っていて時間帯を問わず、いつ覗いてもわいわい盛り上がっています！<br>
                 ちょっとした雑談から深夜のゆる〜いお話まで、気分に合わせて自由に参加できるのが魅力です♪
             </p>
